--- a/MythicMobs_edit.csproj
+++ b/MythicMobs_edit.csproj
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="packages\Walterlv.Themes.FluentDesign.Source.0.15.0\build\Walterlv.Themes.FluentDesign.Source.props" Condition="Exists('packages\Walterlv.Themes.FluentDesign.Source.0.15.0\build\Walterlv.Themes.FluentDesign.Source.props')" />
   <Import Project="packages\Costura.Fody.4.1.0\build\Costura.Fody.props" Condition="Exists('packages\Costura.Fody.4.1.0\build\Costura.Fody.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -87,6 +88,9 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xaml">
       <RequiredTargetFramework>4.0</RequiredTargetFramework>
+    </Reference>
+    <Reference Include="Walterlv.Themes.FluentDesign, Version=0.15.0.0, Culture=neutral, PublicKeyToken=ca7319592574d503, processorArchitecture=MSIL">
+      <HintPath>packages\Walterlv.Themes.FluentDesign.0.15.0\lib\net45\Walterlv.Themes.FluentDesign.dll</HintPath>
     </Reference>
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
@@ -1298,4 +1302,5 @@
     <Error Condition="!Exists('packages\Fody.6.0.5\build\Fody.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\Fody.6.0.5\build\Fody.targets'))" />
   </Target>
   <Import Project="packages\Fody.6.0.5\build\Fody.targets" Condition="Exists('packages\Fody.6.0.5\build\Fody.targets')" />
+  <Import Project="packages\Walterlv.Themes.FluentDesign.Source.0.15.0\build\Walterlv.Themes.FluentDesign.Source.targets" Condition="Exists('packages\Walterlv.Themes.FluentDesign.Source.0.15.0\build\Walterlv.Themes.FluentDesign.Source.targets')" />
 </Project>
