--- a/packages.config
+++ b/packages.config
@@ -5,6 +5,7 @@
   <package id="Fody" version="6.0.5" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.3" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net452" />
+  <package id="Walterlv.Themes.FluentDesign" version="0.15.0" targetFramework="net452" />
   <package id="YamlDotNet" version="7.0.0" targetFramework="net452" />
   <package id="YamlDotNet.Signed" version="6.0.0" targetFramework="net452" />
 </packages>
