--- a/packages.config
+++ b/packages.config
@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="ControlzEx" version="4.1.1" targetFramework="net452" />
+  <package id="ControlzEx" version="3.0.2.4" targetFramework="net452" />
   <package id="Costura.Fody" version="4.1.0" targetFramework="net452" />
   <package id="Fody" version="6.0.5" targetFramework="net452" developmentDependency="true" />
+  <package id="MahApps.Metro" version="1.6.5" targetFramework="net452" />
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.3" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net452" />
   <package id="Walterlv.Themes.FluentDesign" version="0.15.0" targetFramework="net452" />
