--- a/packages.config
+++ b/packages.config
@@ -1,12 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="ControlzEx" version="3.0.2.4" targetFramework="net452" />
-  <package id="Costura.Fody" version="4.1.0" targetFramework="net452" />
-  <package id="Fody" version="6.0.5" targetFramework="net452" developmentDependency="true" />
-  <package id="MahApps.Metro" version="1.6.5" targetFramework="net452" />
-  <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.3" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net452" />
-  <package id="Walterlv.Themes.FluentDesign" version="0.15.0" targetFramework="net452" />
-  <package id="YamlDotNet" version="7.0.0" targetFramework="net452" />
-  <package id="YamlDotNet.Signed" version="6.0.0" targetFramework="net452" />
+  <package id="Microsoft.NETCore.Platforms" version="5.0.2" targetFramework="net48" />
+  <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net48" />
+  <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.31" targetFramework="net48" />
+  <package id="YamlDotNet" version="11.2.1" targetFramework="net48" />
 </packages>
